--- a/manager/include/sidebar.phtml
+++ b/manager/include/sidebar.phtml
@@ -142,7 +142,15 @@
 								<span class="title">Manage Customers</span>
 							</a>
 						</li>
+						<!--
+						<li <% if InStr(current_menu,"customer_manage_company") then%>class="active open"<% end if %>>
+							<a href="customer_manage_company.phtml">
+								<span class="title">Manage Company</span>
+							</a>
+						</li>
+						-->
 					</ul>
+					
 				</li>
 				<li <% if InStr(current_menu,"design_") then%>class="active open"<% end if %>>
 					<a href="javascript:void(0)">
