--- a/manager/sales_orders_detail.phtml
+++ b/manager/sales_orders_detail.phtml
@@ -159,7 +159,7 @@
 <link rel="stylesheet" href="assets/css/custom.css">
 </head>
 <body>
-	<div id="app" class="app-sidebar-closed">
+	<div id="app">
 		<!--#INCLUDE FILE="include/sidebar.phtml"-->
 		<div class="app-content">
 			<!--#INCLUDE FILE="include/header.phtml"-->
