--- a/manager/api/sp_catalog_manufacturer_detail_update.phtml
+++ b/manager/api/sp_catalog_manufacturer_detail_update.phtml
@@ -4,7 +4,8 @@
 	Response.CharSet = "UTF-8"
 %>
 <!--#INCLUDE FILE="../../util/xt_func_carrier.phtml"-->
-<!--#INCLUDE FILE="../util/xt_func_string.phtml"-->	
+<!--#INCLUDE FILE="../../util/xt_func_string.phtml"-->	
+<!--#INCLUDE FILE="../../util/xt_func_util.phtml"-->	
 <!-- #INCLUDE File="../local/local.phtml" -->
 <%
 	'Response.end
