--- a/manager/catalog_manufacturer.phtml
+++ b/manager/catalog_manufacturer.phtml
@@ -34,12 +34,9 @@
 							<span class="mainDescription">overview &amp; list </span>
 						</div>
 						<ol class="breadcrumb">
-							<li>
-								<span>Catalog</span>
-							</li>
-							<li class="active">
-								<span>Manage Manufacturer</span>
-							</li>
+							<% if Session("CURRENT_ADMIN_VIEW_ID") = "1" then %>
+								<a href="#" class="btn btn-green btn-sm modal-edit-line" data-placement="top" data-id="0" data-toggle="modal" style="float:right"><i class="ti-plus"></i> Add New Manufacturer</a>
+							<% end if %>
 						</ol>
 					</div>
 				</section>
@@ -54,11 +51,13 @@
 											<i class="pink fa fa-info"></i> Maufacturers
 										</a>
 									</li>
+									<% if g_store_use_icecat_catalog = "1" then %>
 									<li class="">
 										<a href="#panel_tab4_example2" data-toggle="tab">
 											<i class="blue fa fa-info-circle"></i> ICECAT Manufacturers
 										</a>
 									</li>
+									<% end if %>
 								</ul>
 								<div class="tab-content">
 									<div class="tab-pane active" id="panel_tab4_example1">
@@ -70,7 +69,7 @@
 														<th>ID</th>
 														<th>Name</th>
 														<th>MAP Enabled</th>
-														<th>Action</th>
+														<th>Edit</th>
 													</tr>
 													</thead>
 													<tbody>
@@ -82,9 +81,29 @@
 											</div>
 										</div>
 									</div>
+									<% if g_store_use_icecat_catalog = "1" then %>
 									<div class="tab-pane" id="panel_tab4_example2">
-									.......
+										<div class="row">
+											<div class="col-md-12">
+												<table class="table table-striped table-bordered table-hover table-full-width" id="catalog_manufacturer_2">
+													<thead>
+													<tr>
+														<th>ID</th>
+														<th>Name</th>
+														<th>MAP Enabled</th>
+														<th>Edit</th>
+													</tr>
+													</thead>
+													<tbody>
+														<tr>
+															<td colspan="4" class="dataTables_empty">Loading data from server</td>
+														</tr>
+													</tbody>
+												</table>
+											</div>
+										</div>
 									</div>
+									<% end if %>
 								</div>
 							</div>
 						</div>
@@ -96,6 +115,8 @@
 	<!--#INCLUDE FILE="include/footer.phtml"-->
 	</div>
 	<div id="ajax-modal3" class="modal fade" tabindex="-1" style="display: none;"></div>
+	<div id="ajax-modal4" class="modal fade" tabindex="-1" style="display: none;"></div>
+	
 	<!--#INCLUDE FILE="include/js.phtml"-->
 	<!-- start: JAVASCRIPTS REQUIRED FOR THIS PAGE ONLY -->
 	<script src="vendor/select2/select2.min.js"></script>
@@ -108,7 +129,7 @@
 	<script src="assets/js/main.js"></script>
 	<!-- start: JavaScript Event Handlers for this page -->
 	<script type="text/javascript">
-	var oTable;
+	var oTable, oTable2;
 	var v1 = "All";
 	var v2 = "All";
 	var v3 = "All";
@@ -202,11 +223,84 @@
 			$('#catalog_manufacturer_1_wrapper .dataTables_length select').select2();
 			// initialzie select2 dropdown
 		};
-		
+		<% if g_store_use_icecat_catalog = "1" then %>
+		var runDataTable2 = function () {
+			oTable2 = $('#catalog_manufacturer_2').dataTable({
+				"bProcessing": true,
+				"searchDelay": 800,
+				"bStateSave": true,
+				"bJQueryUI": false,
+				"iDisplayLength": 20,
+				"bServerSide": true,
+				"bAutoWidth": false,
+				"sAjaxSource": "api/sp_icecat_manufacturer_list.phtml",
+				"aoColumns": [ 
+					/* ID */  { "sClass": "left" },
+					/* Name */  { "sClass": "left" },
+					/* MAP*/  { "sClass": "center" ,"bSortable": false},
+					/* Action*/  { "sClass": "center" ,"bSortable": false}
+				  ],
+				  
+				"aaSorting": [[1, 'asc']],
+				
+				"aLengthMenu": [
+					[10, 20, 30, 40, 50],
+					[10, 20, 30, 40, 50] // change per page values here
+				],
+				
+				"oLanguage": {
+					"sLengthMenu": "Show _MENU_ Rows",
+					"sSearch": "",
+					"sProcessing": '<img src="assets/images/ajax-loader-primary.gif"/>',
+					"oPaginate": {
+						"sPrevious": "Prev",
+						"sNext": "Next"
+					}
+				},
+				
+				'fnServerData' : function ( sSource, aoData, fnCallback ) {
+					aoData.push( { 'name' : 'min', 'value' : $("#min").val() } );
+					aoData.push( { 'name' : 'max', 'value' : $("#max").val() } );
+					$.ajax({
+						'dataType' : 'json',
+						'data' : aoData,
+						'type' : 'GET',
+						'url' : sSource,
+						'success' : fnCallback
+					});
+				} 
+			});
+			
+			$('#catalog_manufacturer_2').on( 'draw.dt', function () {
+				var $modal4 = $('#ajax-modal4');
+				$('.modal-edit-line2').on('click', function () {
+					$('body').modalmanager('loading');
+					var modal_mfg_id = $(this).data('id');
+					setTimeout(function () {
+						$modal4.load('api/modal_ajax_icecat_mfg_edit.phtml?mfg_id=' + modal_mfg_id, '', function () {
+							$modal4.modal();
+						});
+					}, 500);
+					
+				});
+			} );
+			
+			$('#catalog_manufacturer_2_wrapper .dataTables_filter input').addClass("form-control input-sm").attr("placeholder", "Search");
+			// modify table search input
+			$('#catalog_manufacturer_2_wrapper .dataTables_length select').addClass("m-wrap small");
+			// modify table per page dropdown
+			$('#catalog_manufacturer_2_wrapper .dataTables_length select').select2();
+			// initialzie select2 dropdown
+			
+		};
+		<% end if %>
 		return {
 			//main function to initiate template pages
 			init: function () {
 				runDataTable();
+				<% if g_store_use_icecat_catalog = "1" then %>
+				runDataTable2();
+				<% end if %>
 			},
 			
 			reload: function(theURL) {
@@ -215,6 +309,15 @@
 				}
 				else {
 					oTable.fnReloadAjax("api/sp_manufacturer_list.phtml");
+				}
+			},
+			
+			reload2: function(theURL) {
+				if ( theURL ) {
+					oTable2.fnReloadAjax(theURL);
+				}
+				else {
+					oTable2.fnReloadAjax("api/sp_icecat_manufacturer_list.phtml");
 				}
 			}
 		};
@@ -229,7 +332,14 @@
 			var $modal3 = $('#ajax-modal3');
 			$modal3.on('hidden', function () {
 				TableData.reload();
-			})
+			});
+			
+			<% if g_store_use_icecat_catalog = "1" then %>
+			var $modal4 = $('#ajax-modal4');
+			$modal4.on('hidden', function () {
+				TableData.reload2();
+			});
+			<% end if %>
 			
 		});
 	</script>
