--- a/manager/catalog_product_detail.phtml
+++ b/manager/catalog_product_detail.phtml
@@ -1249,7 +1249,7 @@ ul.dynatree-container {
 																Page Title
 															</label>
 															<div class="col-sm-9">
-																<input type="text" placeholder="" id="pf_page_title" name="pf_page_title" class="form-control" value="<%=pf_page_title%>">
+																<input type="text" placeholder="" id="pf_page_title" name="pf_page_title" class="form-control input-sm" value="<%=pf_page_title%>">
 															</div>
 														</div>
 														<div class="form-group">
@@ -1257,7 +1257,7 @@ ul.dynatree-container {
 																Meta Keywords
 															</label>
 															<div class="col-sm-9">
-																<textarea maxlength="255" id="pf_meta_keywords" name="pf_meta_keywords" class="form-control limited"><%=pf_meta_keywords%></textarea>
+																<textarea maxlength="255" id="pf_meta_keywords" name="pf_meta_keywords" class="form-control limited input-sm"><%=pf_meta_keywords%></textarea>
 															</div>
 														</div>
 														<div class="form-group">
@@ -1265,7 +1265,7 @@ ul.dynatree-container {
 																Meta Description
 															</label>
 															<div class="col-sm-9">
-																<textarea maxlength="255" id="pf_meta_description" name="pf_meta_description" class="form-control limited"><%=pf_meta_description%></textarea>
+																<textarea maxlength="255" id="pf_meta_description" name="pf_meta_description" class="form-control limited input-sm"><%=pf_meta_description%></textarea>
 															</div>
 														</div>
 													</div>
