--- a/theme/marketshop1/include/head.phtml
+++ b/theme/marketshop1/include/head.phtml
@@ -2,7 +2,7 @@
 <meta name="format-detection" content="telephone=no" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <link href="image/favicon.png" rel="icon" />
-<title>HUBUTU</title>
+<title><%=g_page_title%></title>
 <meta name="description" content="Responsive and clean html template design for any kind of ecommerce webshop">
 <!-- CSS Part Start-->
 <link rel="stylesheet" type="text/css" href="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/js/bootstrap/css/bootstrap.min.css" />
@@ -10,6 +10,15 @@
 <link rel="stylesheet" type="text/css" href="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/css/stylesheet.css" />
 <link rel="stylesheet" type="text/css" href="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/css/owl.carousel.css" />
 <link rel="stylesheet" type="text/css" href="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/css/owl.transitions.css" />
+<% if g_route_page_id = "product" then %>
+<link rel="stylesheet" type="text/css" href="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/js/swipebox/src/css/swipebox.min.css">
+<% end if %>
 <link rel="stylesheet" type="text/css" href="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/css/responsive.css" />
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans' type='text/css'>
+<style>
+label.error {
+    color: red;
+    font-style: italic;
+}
+</style>
 <!-- CSS Part End-->
