--- a/theme/marketshop1/include/login.phtml
+++ b/theme/marketshop1/include/login.phtml
@@ -8,7 +8,8 @@
 	<!-- Breadcrumb End-->
 	<div class="row">
 		<!--Middle Part Start-->
-		<div id="content" class="col-sm-9">
+		<form action="<%=g_secure_url %>tp_login.phtml" method="post" id="login-form">
+		<div id="content" class="col-sm-12">
 			<h1 class="title"><%=a("Account Login")%></h1>
 			<div class="row">
 				<div class="col-sm-6">
@@ -19,7 +20,7 @@
 					<p>
 						<%=a("By creating an account you will be able to shop faster, be up to date on an order's status, and keep track of the orders you have previously made.")%>
 					</p>
-					<a href="register.html" class="btn btn-primary"><%=a("Continue")%></a>
+					<a href="register.phtml" class="btn btn-primary"><%=a("Continue")%></a>
 				</div>
 				<div class="col-sm-6">
 					<h2 class="subtitle"><%=a("Registered Customers")%></h2>
@@ -27,12 +28,12 @@
 						<strong><%=a("I am a returning customer")%></strong>
 					</p>
 					<div class="form-group">
-						<label class="control-label" for="input-email"><%=a("E-Mail Address")%></label>
-						<input type="text" name="email" value="" placeholder="<%=a("E-Mail Address")%>" id="input-email" class="form-control"/>
+						<label class="control-label" for="login_email"><%=a("E-Mail Address")%></label>
+						<input type="text" name="login_email" value="" placeholder="<%=a("E-Mail Address")%>" id="login_email" class="form-control"/>
 					</div>
 					<div class="form-group">
-						<label class="control-label" for="input-password"><%=a("Password")%></label>
-						<input type="password" name="password" value="" placeholder="<%=a("Password")%>" id="input-password" class="form-control"/>
+						<label class="control-label" for="login_password"><%=a("Password")%></label>
+						<input type="password" name="login_password" value="" placeholder="<%=a("Password")%>" id="login_password" class="form-control"/>
 						<br/>
 						<a href="#"><%=a("Forgot Password?")%></a>
 					</div>
@@ -41,27 +42,8 @@
 			</div>
 		</div>
 		<!--Middle Part End -->
-		<!--Right Part Start -->
-		<aside id="column-right" class="col-sm-3 hidden-xs">
-		<h3 class="subtitle">Account</h3>
-		<div class="list-group">
-			<ul class="list-item">
-				<li><a href="login.html">Login</a></li>
-				<li><a href="register.html">Register</a></li>
-				<li><a href="#">Forgotten Password</a></li>
-				<li><a href="#">My Account</a></li>
-				<li><a href="#">Address Books</a></li>
-				<li><a href="wishlist.html">Wish List</a></li>
-				<li><a href="#">Order History</a></li>
-				<li><a href="#">Downloads</a></li>
-				<li><a href="#">Reward Points</a></li>
-				<li><a href="#">Returns</a></li>
-				<li><a href="#">Transactions</a></li>
-				<li><a href="#">Newsletter</a></li>
-				<li><a href="#">Recurring payments</a></li>
-			</ul>
-		</div>
-		</aside>
-		<!--Right Part End -->
+		<input type="hidden" name="agreeterms" value="1">
+		</form>
+		
 	</div>
 </div>
