--- a/theme/marketshop1/login.phtml
+++ b/theme/marketshop1/login.phtml
@@ -1,6 +1,7 @@
 <%
 	Response.CodePage = 65001
 	Response.CharSet = "UTF-8"
+	g_route_page_id = "login"
 %>
 <!--#INCLUDE FILE="../../core/checkout/include_login_start.phtml"-->
 <!--#INCLUDE FILE="template_setting.phtml"-->
