--- a/theme/marketshop1/product.phtml
+++ b/theme/marketshop1/product.phtml
@@ -1,9 +1,10 @@
 <%
 	Response.CodePage = 65001
 	Response.CharSet = "UTF-8"
+	g_route_page_id = "product"
 %>
-<!--#INCLUDE FILE="../../core/catalog/include_product_start.phtml"-->
 <!--#INCLUDE FILE="template_setting.phtml"-->
+<!--#INCLUDE FILE="../../core/catalog/include_product_start.phtml"-->
 <!DOCTYPE html>
 <html>
 <head>
