--- a/theme/marketshop1/template_setting.phtml
+++ b/theme/marketshop1/template_setting.phtml
@@ -12,7 +12,15 @@ Else
 End if
 	
 '=====================================THEME OPTIONS====================================================================
-THEME_TEMPLATE = "marketshop1"	
+THEME_TEMPLATE = "marketshop1"
+EC_imageListWidth = "200"
+EC_imageListWidth = "200"
+EC_thumbWidth = "66"
+EC_thumbHeight = "66"
+EC_imageWidth = "350"
+EC_imageHeight = "350"
+EC_zoomWidth = "500"
+EC_zoomHeight = "500"
 'theme_10000_color = GetSettingValue("theme_10000_color", "blue")
 'THEME_TEMPLATE = "nle"
 	
