--- a/manager/catalog_category.phtml
+++ b/manager/catalog_category.phtml
@@ -20,6 +20,8 @@
 <link href="vendor/select2/select2.min.css" rel="stylesheet" media="screen">
 <link href="vendor/DataTables/css/DT_bootstrap.css" rel="stylesheet" media="screen">
 <link href="vendor/DataTables/css/fixedColumns.dataTables.min.css" rel="stylesheet" media="screen">
+<link href="assets/plugins/bootstrap-modal/css/bootstrap-modal-bs3patch.css" rel="stylesheet" type="text/css"/>
+<link href="assets/plugins/bootstrap-modal/css/bootstrap-modal.css" rel="stylesheet" type="text/css"/>
 <!-- end: CSS REQUIRED FOR THIS PAGE ONLY -->
 <link rel="stylesheet" href="assets/css/custom.css">
 </head>	
@@ -201,7 +203,6 @@
 	  Are you sure you want to do this?
 	</div>
 	
-	</style>
 	<!--#INCLUDE FILE="include/js.phtml"-->
 	<!-- start: JAVASCRIPTS REQUIRED FOR THIS PAGE ONLY -->
 	<script src="assets/plugins/jquery-ui/jquery-ui-1.10.1.custom.min.js" type="text/javascript"></script>
