--- a/theme/marketshop1/include/js.phtml
+++ b/theme/marketshop1/include/js.phtml
@@ -4,5 +4,152 @@
 <script type="text/javascript" src="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/js/jquery.easing-1.3.min.js"></script>
 <script type="text/javascript" src="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/js/jquery.dcjqaccordion.min.js"></script>
 <script type="text/javascript" src="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/js/owl.carousel.min.js"></script>
+<script src="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/js/jquery-validation/js/jquery.validate.min.js" type="text/javascript"></script>
+<script src="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/js/jquery-validation/js/additional-methods.min.js" type="text/javascript"></script>
+<% if g_route_page_id = "product" then %>
+<script type="text/javascript" src="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/js/jquery.elevateZoom-3.0.8.min.js"></script>
+<script type="text/javascript" src="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/js/swipebox/lib/ios-orientationchange-fix.js"></script>
+<script type="text/javascript" src="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/js/swipebox/src/js/jquery.swipebox.min.js"></script>
+<% end if %>
 <script type="text/javascript" src="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/js/custom.js"></script>
+<% if g_route_page_id = "product" then %>
+<script type="text/javascript">
+// Elevate Zoom for Product Page image
+$("#zoom_01").elevateZoom({
+	gallery:'gallery_01',
+	cursor: 'pointer',
+	galleryActiveClass: 'active',
+	imageCrossfade: true,
+	zoomWindowFadeIn: 500,
+	zoomWindowFadeOut: 500,
+	lensFadeIn: 500,
+	lensFadeOut: 500,
+	loadingIcon: 'image/progress.gif'
+	}); 
+//////pass the images to swipebox
+$("#zoom_01").bind("click", function(e) {
+  var ez =   $('#zoom_01').data('elevateZoom');
+	$.swipebox(ez.getGalleryList());
+  return false;
+});
+</script>
+
+<script language="javascript">
+var FormValidation = function () {
+	var reviewValidation1 = function() {
+		var form1 = $('#review-form');
+		var error1 = $('.alert-danger', form1);
+		var success1 = $('.alert-success', form1);
+
+		form1.validate({
+			
+			//RULES
+			rules: {
+				title: {
+					required: true
+				},
+				review: {
+					required: true
+				},
+				rating: {
+					required: true
+				}
+			},
+			messages: {
+				login_email: {
+					required: "Please enter your email address.",
+					email : "Please enter a valid email address."
+				},
+				login_password: {
+					required: "Please enter your password."
+				}
+			},
+			highlight: function (element) { // hightlight error inputs
+
+				$(element)
+					.closest('.form-group').addClass('has-error'); // set error class to the control group
+			},
+
+			unhighlight: function (element) { // revert the change done by hightlight
+				$(element)
+					.closest('.form-group').removeClass('has-error'); // set error class to the control group
+			},
+			
+		});
+
+	}
+	return {
+		//main function to initiate the module
+		init: function () {
+			reviewValidation1();
+		}
+	};
+
+}();
+</script>
+<script type="text/javascript">
+jQuery(document).ready(function() { 
+   FormValidation.init();
+});
+</script>
+
+<% end if %>
+<% if g_route_page_id = "login" then %>
+<script language="javascript">
+var FormValidation = function () {
+	var loginValidation1 = function() {
+		var form1 = $('#login-form');
+		var error1 = $('.alert-danger', form1);
+		var success1 = $('.alert-success', form1);
+
+		form1.validate({
+			
+			//RULES
+			rules: {
+				login_email: {
+					required: true,
+					email: true
+				},
+				login_password: {
+					required: true
+				}
+			},
+			messages: {
+				login_email: {
+					required: "Please enter your email address.",
+					email : "Please enter a valid email address."
+				},
+				login_password: {
+					required: "Please enter your password."
+				}
+			},
+			highlight: function (element) { // hightlight error inputs
+
+				$(element)
+					.closest('.form-group').addClass('has-error'); // set error class to the control group
+			},
+
+			unhighlight: function (element) { // revert the change done by hightlight
+				$(element)
+					.closest('.form-group').removeClass('has-error'); // set error class to the control group
+			},
+			
+		});
+
+	}
+	return {
+		//main function to initiate the module
+		init: function () {
+			loginValidation1();
+		}
+	};
+
+}();
+</script>
+<script type="text/javascript">
+jQuery(document).ready(function() { 
+   FormValidation.init();
+});
+</script>
+<% end if %>
 <!-- JS Part End-->
