--- a/theme/marketshop1/include/product.phtml
+++ b/theme/marketshop1/include/product.phtml
@@ -10,32 +10,61 @@
 		<!--Middle Part Start-->
 		<div id="content" class="col-sm-9">
 			<div itemscope itemtype="http://schema.org/Product">
-				<h1 class="title" itemprop="name">Laptop Silver black</h1>
+				<h1 class="title" itemprop="name"><%=x_prod_name%></h1>
 				<div class="row product-info">
 					<div class="col-sm-6">
 						<div class="image">
-							<img class="img-responsive" itemprop="image" id="zoom_01" src="image/product/macbook_air_1-350x350.jpg" title="Laptop Silver black" alt="Laptop Silver black" data-zoom-image="image/product/macbook_air_1-500x500.jpg"/>
+							<img class="img-responsive" itemprop="image" id="zoom_01" src="<%=x_prod_image%>" title="<%=x_prod_name%>" alt="<%=x_prod_name%>" data-zoom-image="<%=x_prod_zoom_image%>"/>
 						</div>
 						<div class="center-block text-center">
 							<span class="zoom-gallery"><i class="fa fa-search"></i> Click image for Gallery</span>
 						</div>
 						<div class="image-additional" id="gallery_01">
-							<a class="thumbnail" href="#" data-zoom-image="image/product/macbook_air_1-500x500.jpg" data-image="image/product/macbook_air_1-350x350.jpg" title="Laptop Silver black"><img src="image/product/macbook_air_1-66x66.jpg" title="Laptop Silver black" alt="Laptop Silver black"/></a><a class="thumbnail" href="#" data-zoom-image="image/product/macbook_air_4-500x500.jpg" data-image="image/product/macbook_air_4-350x350.jpg" title="Laptop Silver black"><img src="image/product/macbook_air_4-66x66.jpg" title="Laptop Silver black" alt="Laptop Silver black"/></a><a class="thumbnail" href="#" data-zoom-image="image/product/macbook_air_2-500x500.jpg" data-image="image/product/macbook_air_2-350x350.jpg" title="Laptop Silver black"><img src="image/product/macbook_air_2-66x66.jpg" title="Laptop Silver black" alt="Laptop Silver black"/></a><a class="thumbnail" href="#" data-zoom-image="image/product/macbook_air_3-500x500.jpg" data-image="image/product/macbook_air_3-350x350.jpg" title="Laptop Silver black"><img src="image/product/macbook_air_3-66x66.jpg" title="Laptop Silver black" alt="Laptop Silver black"/></a>
-						</div>
+							<a class="thumbnail" href="#" data-zoom-image="<%=x_prod_zoom_image%>" data-image="<%=x_prod_image%>"><img src="<%=x_prod_thumb_image%>"/></a>
+							<%
+								sql = "SELECT * FROM " & g_storeid & "_product_image WHERE pf_id = '" & pf_id & "' AND image_name <> '" & x_prod_image_file & "'"
+								set rs = dbconn.Execute(sql)
+								do while not rs.EOF
+									cloudImg = Trim(rs("cloud_url"))
+									ssImg = Replace(cloudImg, "upload/", ssImgSize)
+									ssImg1 = Replace(cloudImg, "upload/", ssThumbSize)
+									ssImg2 = Replace(cloudImg, "upload/", ssZoomSize)
+									
+							%>
+							<a class="thumbnail" href="#" data-zoom-image="<%=ssImg2%>" data-image="<%=ssImg%>"><img src="<%=ssImg1%>"/></a>
+							<%
+									rs.MoveNext
+								loop
+								rs.Close
+								set rs = nothing
+							%></div>
 					</div>
 					<div class="col-sm-6">
+
 						<ul class="list-unstyled description">
-							<li><b>Brand:</b><a href="#"><span itemprop="brand">Apple</span></a></li>
-							<li><b>Product Code:</b><span itemprop="mpn">Product 17</span></li>
-							<li><b>Reward Points:</b> 700</li>
-							<li><b>Availability:</b><span class="instock">In Stock</span></li>
+							<% if Len(x_vendor_name) > 0 then %>
+							<li><b><%=a("Brand")%>:</b> <a href="#"><span itemprop="brand"><%=x_vendor_name%></span></a></li>
+							<% end if %>
+							<% if Len(x_prod_manu_part_num) > 0 then %>
+							<li><b><%=a("Mfg. Part #")%>:</b> <a href="#"><span itemprop="brand"><%=x_prod_manu_part_num%></span></a></li>
+							<% end if %>
+							<li><b><%=a("SKU")%>:</b><span itemprop="mpn"><%=x_prod_sku%></span></li>
+							<li><b><%=a("Availability")%>:</b> <span class="instock"><%=x_prod_stock_status_display%></span></li>
 						</ul>
+						<div><%=x_prod_desc%></div>
 						<ul class="price-box">
-							<li class="price" itemprop="offers" itemscope itemtype="http://schema.org/Offer"><span class="price-old">$1,202.00</span><span itemprop="price">$1,142.00<span itemprop="availability" content="In Stock"></span></span></li>
+							<li class="price" itemprop="offers" itemscope itemtype="http://schema.org/Offer">
+								<% if x_prod_on_sale = 1 then %>
+								<span class="price-old">$<%=FormatNumber(x_prod_group_price,2)%></span>
+								<span itemprop="price">$<%=FormatNumber(x_prod_sale_price,2)%><span itemprop="availability" content="<%=x_prod_stock_status_display%>"></span></span>
+								<% else %>
+								<span itemprop="price">$<%=FormatNumber(x_prod_group_price,2)%><span itemprop="availability" content="<%=x_prod_stock_status_display%>"></span></span>
+								<% end if %>
+							</li>
 							<li></li>
-							<li>Ex Tax: $950.00</li>
 						</ul>
 						<div id="product">
+							<!--
 							<h3 class="subtitle">Available Options</h3>
 							<div class="form-group required">
 								<label class="control-label">Color</label>
@@ -47,6 +76,7 @@
 									<option value="2">Blue </option>
 								</select>
 							</div>
+							-->
 							<div class="cart">
 								<div>
 									<div class="qty">
@@ -61,171 +91,147 @@
 								</div>
 								<div>
 									<button type="button" class="wishlist" onclick=""><i class="fa fa-heart"></i> Add to Wish List</button>
-									<br/>
-									<button type="button" class="wishlist" onclick=""><i class="fa fa-exchange"></i> Compare this Product</button>
 								</div>
 							</div>
 						</div>
 						<div class="rating" itemprop="aggregateRating" itemscope itemtype="http://schema.org/AggregateRating">
 							<meta itemprop="ratingValue" content="0"/>
 							<p>
-								<span class="fa fa-stack"><i class="fa fa-star fa-stack-1x"></i><i class="fa fa-star-o fa-stack-1x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-1x"></i><i class="fa fa-star-o fa-stack-1x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-1x"></i><i class="fa fa-star-o fa-stack-1x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-1x"></i><i class="fa fa-star-o fa-stack-1x"></i></span><span class="fa fa-stack"><i class="fa fa-star-o fa-stack-1x"></i></span><a onclick="$('a[href=\'#tab-review\']').trigger('click'); return false;" href=""><span itemprop="reviewCount">1 reviews</span></a> / <a onclick="$('a[href=\'#tab-review\']').trigger('click'); return false;" href="">Write a review</a>
+								<%
+									for ii =1 to 5
+									
+										if x_review_avg >= ii then
+											Response.Write("<span class=""fa fa-stack""><i class=""fa fa-star fa-stack-2x""></i><i class=""fa fa-star-o fa-stack-2x""></i></span>")
+										else
+											Response.Write("<span class=""fa fa-stack""><i class=""fa fa-star-o fa-stack-2x""></i></span>")
+										end if
+								
+									next
+								%>
+								<a onclick="$('a[href=\'#tab-review\']').trigger('click'); return false;" href=""><span itemprop="reviewCount"><%=x_review_count%> reviews</span></a> 
+								<% if x_bWriteReview then %>
+								/ <a onclick="$('a[href=\'#tab-review\']').trigger('click'); return false;" href="">Write a review</a>
+								<% end if %>
 							</p>
 						</div>
 						<hr>
 						<!-- AddThis Button BEGIN -->
-						<div class="addthis_toolbox addthis_default_style">
-							<a class="addthis_button_facebook_like" fb:like:layout="button_count"></a><a class="addthis_button_tweet"></a><a class="addthis_button_google_plusone" g:plusone:size="medium"></a><a class="addthis_button_pinterest_pinit" pi:pinit:layout="horizontal" pi:pinit:url="http://www.addthis.com/features/pinterest" pi:pinit:media="http://www.addthis.com/cms-content/images/features/pinterest-lg.png"></a><a class="addthis_counter addthis_pill_style"></a>
-						</div>
-						<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-514863386b357649"></script>
+						<!-- AddThis Button BLOCK -->
 						<!-- AddThis Button END -->
 					</div>
 				</div>
 				<ul class="nav nav-tabs">
-					<li class="active"><a href="#tab-description" data-toggle="tab">Description</a></li>
-					<li><a href="#tab-specification" data-toggle="tab">Specification</a></li>
-					<li><a href="#tab-review" data-toggle="tab">Reviews (2)</a></li>
+					<li class="active"><a href="#tab-description" data-toggle="tab">Details</a></li>
+					<% for ii = 1 to 5 %>
+					<% if pf_tab_show(ii) = 1 then %>
+					<li><a href="#tab<%=ii%>" data-toggle="tab"><%=pf_tab_name(ii)%></a></li>
+					<% end if %>
+					<% next %>
+					<li><a href="#tab-review" data-toggle="tab">Reviews (<%=x_review_count%>)</a></li>
 				</ul>
 				<div class="tab-content">
 					<div itemprop="description" id="tab-description" class="tab-pane active">
 						<div>
-							<p>
-								<b>Intel Core 2 Duo processor</b>
-							</p>
-							<p>
-								Powered by an Intel Core 2 Duo processor at speeds up to 2.16GHz, the new MacBook is the fastest ever.
-							</p>
-							<p>
-								<b>1GB memory, larger hard drives</b>
-							</p>
-							<p>
-								The new MacBook now comes with 1GB of memory standard and larger hard drives for the entire line perfect for running more of your favorite applications and storing growing media collections.
-							</p>
-							<p>
-								<b>Sleek, 1.08-inch-thin design</b>
-							</p>
-							<p>
-								MacBook makes it easy to hit the road thanks to its tough polycarbonate case, built-in wireless technologies, and innovative MagSafe Power Adapter that releases automatically if someone accidentally trips on the cord.
-							</p>
-							<p>
-								<b>Built-in iSight camera</b>
-							</p>
-							<p>
-								Right out of the box, you can have a video chat with friends or family,2 record a video at your desk, or take fun pictures with Photo Booth
-							</p>
+							<%=x_prod_detail%>
 						</div>
 					</div>
-					<div id="tab-specification" class="tab-pane">
-						<table class="table table-bordered">
-						<thead>
-						<tr>
-							<td colspan="2">
-								<strong>Memory</strong>
-							</td>
-						</tr>
-						</thead>
-						<tbody>
-						<tr>
-							<td>
-								test 1
-							</td>
-							<td>
-								8gb
-							</td>
-						</tr>
-						</tbody>
-						</table>
-						<table class="table table-bordered">
-						<thead>
-						<tr>
-							<td colspan="2">
-								<strong>Processor</strong>
-							</td>
-						</tr>
-						</thead>
-						<tbody>
-						<tr>
-							<td>
-								No. of Cores
-							</td>
-							<td>
-								1
-							</td>
-						</tr>
-						</tbody>
-						</table>
+					<% for ii = 1 to 5 %>
+					<% if pf_tab_show(ii) = 1 then %>
+					<div id="tab<%=ii%>" class="tab-pane">
+					<%=GetTabContent(pf_id, ii, pf_tab_type(ii))%>
 					</div>
+					<% end if %>
+					<% next %>
 					<div id="tab-review" class="tab-pane">
-						<form class="form-horizontal">
+						<form action="tp_write_review.phtml" class="form-horizontal" method="post" id="review-form">
+						<input type="hidden" name="pf_id" value="<%=pf_id%>" />
 							<div id="review">
 								<div>
+									<%
+										sql = "SELECT * FROM " & g_storeid & "_Rating WHERE ProductID = '" & pf_id & "' ORDER BY CreatedOn DESC"
+										set rsRating = dbconn.Execute(sql)
+										do while not rsRating.EOF
+											review_rating = rsRating("rating")
+											review_comment = rsRating("Comments")
+											review_date = FormatDateTime(rsRating("CreatedOn"),2)
+											if Len(review_comment) > 0 then
+												review_comment = Replace(review_comment, VbCrLF, "<br>")
+											end if
+											shopper_sql = "SELECT * FROM " & g_storeid & "_shopper WHERE shopper_id = '" & rsRating("CustomerID") & "'"
+											set shopper = dbconn.Execute(shopper_sql)
+											
+											if not shopper.EOF then
+												review_owner_name = shopper("FirstName") & " " & shopper("LastName")
+											else
+												review_owner_name = ""
+											end if 
+											shopper.Close
+											set shopper = nothing
+									%>
 									<table class="table table-striped table-bordered">
 									<tbody>
 									<tr>
 										<td style="width: 50%;">
-											<strong><span>harvey</span></strong>
+											<strong><span><%=rsRating("ReviewTitle")%> | <%=review_owner_name%></span></strong>
 										</td>
 										<td class="text-right">
-											<span>20/01/2016</span>
+											<span><%=review_date%></span>
 										</td>
 									</tr>
 									<tr>
 										<td colspan="2">
 											<p>
-												Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+												<%=review_comment%>
 											</p>
 											<div class="rating">
-												<span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span>
+												<%
+													for ii =1 to 5
+													
+														if review_rating >= ii then
+															Response.Write("<span class=""fa fa-stack""><i class=""fa fa-star fa-stack-2x""></i><i class=""fa fa-star-o fa-stack-2x""></i></span>")
+														else
+															Response.Write("<span class=""fa fa-stack""><i class=""fa fa-star-o fa-stack-2x""></i></span>")
+														end if
+												
+													next
+												%>
 											</div>
 										</td>
 									</tr>
 									</tbody>
 									</table>
-									<table class="table table-striped table-bordered">
-									<tbody>
-									<tr>
-										<td style="width: 50%;">
-											<strong><span>Andrson</span></strong>
-										</td>
-										<td class="text-right">
-											<span>20/01/2016</span>
-										</td>
-									</tr>
-									<tr>
-										<td colspan="2">
-											<p>
-												Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-											</p>
-											<div class="rating">
-												<span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span><span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span>
-											</div>
-										</td>
-									</tr>
-									</tbody>
-									</table>
+									<%
+											rsRating.MoveNext
+										loop
+										
+										rsRating.Close
+										set rsRating = nothing
+									%>
 								</div>
 								<div class="text-right">
 								</div>
 							</div>
-							<h2>Write a review</h2>
+							
+							<% if x_bWriteReview then %>
+							<h2><%=a("Write a review")%></h2>
 							<div class="form-group required">
 								<div class="col-sm-12">
-									<label for="input-name" class="control-label">Your Name</label>
-									<input type="text" class="form-control" id="input-name" value="" name="name">
+									<label for="input-title" class="control-label"><%=a("Title")%></label>
+									<input type="text" class="form-control" id="title" value="" name="title">
 								</div>
 							</div>
 							<div class="form-group required">
 								<div class="col-sm-12">
-									<label for="input-review" class="control-label">Your Review</label>
-									<textarea class="form-control" id="input-review" rows="5" name="text"></textarea>
+									<label for="input-review" class="control-label"><%=a("Your Review")%></label>
+									<textarea class="form-control" id="review" rows="5" name="review"></textarea>
 									<div class="help-block">
-										<span class="text-danger">Note:</span> HTML is not translated!
+										<span class="text-danger">Note:</span> <%=a("HTML is not translated!")%>
 									</div>
 								</div>
 							</div>
 							<div class="form-group required">
 								<div class="col-sm-12">
-									<label class="control-label">Rating</label>
+									<label class="control-label" for="rating"><%=a("Rating")%></label>
 									&nbsp;&nbsp;&nbsp; Bad&nbsp; <input type="radio" value="1" name="rating">
 									&nbsp; <input type="radio" value="2" name="rating">
 									&nbsp; <input type="radio" value="3" name="rating">
@@ -236,9 +242,10 @@
 							</div>
 							<div class="buttons">
 								<div class="pull-right">
-									<button class="btn btn-primary" id="button-review" type="button">Continue</button>
+									<button class="btn btn-primary" id="button-review" type="submit"><%=a("Continue")%></button>
 								</div>
 							</div>
+							<% End If %>
 						</form>
 					</div>
 				</div>
