--- a/util/xt_func_string.phtml
+++ b/util/xt_func_string.phtml
@@ -232,27 +232,29 @@ End Function
 
 function a(string)
 	
-	current_locale = "ko_KR"
+	'current_locale = "ko_KR"
 	current_locale = Session("CURRENT_LOCALE")
 	
 	xstring = string
 	
-	Set objConnection = CreateObject("ADODB.Connection")
-	Set objRecordSet = CreateObject("ADODB.Recordset")
-	
-	strPathtoTextFile = Server.MapPath("/") & "\locale\" & current_locale 	
-	objConnection.Open "Provider=Microsoft.ACE.OLEDB.12.0;" & _
-	"Data Source=" & strPathtoTextFile & ";" & _
-	"Extended Properties=""text;HDR=YES;FMT=Delimited;CharacterSet=65001;"""
-	objRecordset.Open "SELECT lang2 FROM [translate.csv] WHERE lang1='" & Replace(string, "'", "''") & "'", objConnection
-	
-	if not objRecordset.EOF then
-		xstring = objRecordset(0)
+	if (g_use_csv_translation = "1") then
+		Set objConnection = CreateObject("ADODB.Connection")
+		Set objRecordSet = CreateObject("ADODB.Recordset")
+		
+		strPathtoTextFile = Server.MapPath("/") & "\locale\" & current_locale 	
+		objConnection.Open "Provider=Microsoft.ACE.OLEDB.12.0;" & _
+		"Data Source=" & strPathtoTextFile & ";" & _
+		"Extended Properties=""text;HDR=YES;FMT=Delimited;CharacterSet=65001;"""
+		objRecordset.Open "SELECT lang2 FROM [translate.csv] WHERE lang1='" & Replace(string, "'", "''") & "'", objConnection
+		
+		if not objRecordset.EOF then
+			xstring = objRecordset(0)
+		end if
+		
+		objRecordset.close
+		set objRecordset = nothing
+		set objConnection = nothing
 	end if
-	
-	objRecordset.close
-	set objRecordset = nothing
-	set objConnection = nothing
 	a = xstring
 	
 End function
